# mcp-copilot

./: .envrc  README.md  pyproject.toml
config/: config.sample.json
src/mcp_server_copilot/: __init__.py  __main__.py  mcp_connection.py  retriever.py  router.py  schemas.py  server.py
